--- a/elapp/src/main/res/layout/activity_video_list.xml
+++ b/elapp/src/main/res/layout/activity_video_list.xml
@@ -1,30 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2016 EasyVaas.
   ~ http://www.easyvaas.com
   ~ All rights reserved.
   -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color_gray">
+    android:background="@color/background_color_gray"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/common_title_tv"
+        layout="@layout/common_header_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true" />
 
     <com.easyvaas.common.recycler.PullToLoadView
         android:id="@+id/pull_load_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="54dp" />
 
     <ImageView
         android:id="@+id/tap_top_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_marginRight="6dp"
         android:layout_marginBottom="6dp"
-        android:visibility="gone"
-        android:src="@drawable/home_top_rocket"/>
+        android:layout_marginRight="6dp"
+        android:src="@drawable/home_top_rocket"
+        android:visibility="gone" />
 </FrameLayout>
