--- a/elapp/src/main/res/layout/activity_web_view.xml
+++ b/elapp/src/main/res/layout/activity_web_view.xml
@@ -10,10 +10,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <include
+        android:id="@+id/common_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        layout="@layout/common_header_layout"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
+        android:layout_marginTop="54dp"
         android:layout_height="match_parent">
         <WebView
             android:id="@+id/web_view"
