--- a/elapp/src/main/res/layout/fragment_home_tab_message.xml
+++ b/elapp/src/main/res/layout/fragment_home_tab_message.xml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/message_top_title_rl"
         android:layout_width="match_parent"
         android:layout_height="@dimen/action_bar_height"
         android:layout_alignParentTop="true"
         android:background="@color/color_main">
+
+        <com.hooview.app.view.CircleImageView
+            android:id="@+id/iv_header"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp" />
+
         <TextView
             android:id="@+id/custom_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="70dp"
             android:text="@string/tab_title_message"
-            android:textSize="@dimen/action_bar_title_text_size"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="@dimen/action_bar_title_text_size" />
+
         <TextView
             android:id="@+id/create_group_tv"
-            android:layout_height="match_parent"
             android:layout_width="wrap_content"
-            android:layout_marginRight="8dp"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:gravity="center"
-            android:text="@string/create_group"
-            android:textSize="@dimen/text_size_12"/>
+            android:layout_marginRight="8dp"
+            android:gravity="center_vertical"
+            android:text="@string/start_group_chat"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_title_h2" />
     </RelativeLayout>
+
     <com.easyvaas.common.recycler.PullToLoadView
         android:id="@+id/pull_load_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/message_top_title_rl"/>
+        android:layout_below="@id/message_top_title_rl"
+        android:layout_marginTop="10dp" />
 </LinearLayout>
