--- a/elapp/src/main/res/layout/fragment_login.xml
+++ b/elapp/src/main/res/layout/fragment_login.xml
@@ -96,7 +96,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_title_h1"
         android:layout_centerHorizontal="true"
-        android:text="@string/next_step"
+        android:text="@string/confirm"
         android:background="@drawable/common_fill_round_three_btn_blue_selector"
         style="?android:buttonBarButtonStyle"/>
     <TextView
