--- a/elapp/src/main/res/layout/include_user_info_view.xml
+++ b/elapp/src/main/res/layout/include_user_info_view.xml
@@ -50,7 +50,7 @@
                     android:text="@string/empty_value"
                     android:drawablePadding="4dp"
                     android:textColor="@color/login_text_color_3"
-                    android:textSize="@dimen/text_size_16"/>
+                    android:textSize="@dimen/text_size_title_h2"/>
             </RelativeLayout>
             <LinearLayout
                 android:id="@+id/user_info_ll"
