--- a/elapp/src/main/res/drawable/video_delete_stroke_round_six_btn_blue_selector.xml
+++ b/elapp/src/main/res/drawable/video_delete_stroke_round_six_btn_blue_selector.xml
@@ -19,7 +19,7 @@
         <shape>
             <stroke
                 android:width="1dp"
-                android:color="@color/btn_color_main"/>
+                android:color="@color/color_main_pressed"/>
             <solid
                 android:color="@android:color/transparent"/>
             <corners
@@ -30,7 +30,7 @@
         <shape>
             <stroke
                 android:width="1dp"
-                android:color="@color/btn_color_main"/>
+                android:color="@color/color_main_pressed"/>
             <solid
                 android:color="@android:color/transparent"/>
             <corners
@@ -42,7 +42,7 @@
             <solid android:color="@android:color/transparent"/>
             <stroke
                 android:width="1dp"
-                android:color="@color/btn_color_main"/>
+                android:color="@color/color_main_pressed"/>
             <corners
                 android:radius="6dp"/>
         </shape>
