--- a/elapp/src/main/res/layout/activity_bind_phone_auth.xml
+++ b/elapp/src/main/res/layout/activity_bind_phone_auth.xml
@@ -14,6 +14,12 @@
     android:orientation="vertical"
     android:background="@color/background_color_gray">
     <include
+        android:id="@+id/common_title_tv"
+        layout="@layout/common_header_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true" />
+    <include
         android:id="@+id/country_code_rl"
         android:layout_width="match_parent"
         android:layout_centerHorizontal="true"
