--- a/elapp/src/main/res/layout/common_header_layout.xml
+++ b/elapp/src/main/res/layout/common_header_layout.xml
@@ -27,6 +27,9 @@
         android:gravity="center_vertical"
         android:layout_marginLeft="60dp"
         android:textSize="@dimen/action_bar_menu_text_size"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:layout_marginRight="40dp"
         android:textColor="@color/color_titlebar_textcolor"/>
     <LinearLayout
         android:id="@+id/add_option_view"
