--- a/EasyChat/src/main/res/values/theme.xml
+++ b/EasyChat/src/main/res/values/theme.xml
@@ -66,7 +66,7 @@
         <item name="android:homeAsUpIndicator">@drawable/ic_arrow_action_bar_back</item>
 
         <!-- Support library compatibility -->
-        <item name="colorPrimary">#cfcfcf</item>
+        <item name="colorPrimary">@color/color_main</item>
         <item name="colorPrimaryDark">@color/material_blue_grey_800</item>
         <item name="colorAccent">@color/material_deep_teal_500</item>
         <item name="actionBarStyle">@style/MyActionBar</item>
@@ -74,22 +74,22 @@
         <item name="actionBarTabTextStyle">@style/MyActionBarTabText</item>
         <item name="actionBarTabStyle">@style/MyActionBarTabs</item>
         <item name="actionBarTabBarStyle">@style/MyActionBarTabBars</item>
-        <item name="actionMenuTextColor">@color/action_menu_text_color</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
         <item name="actionMenuTextAppearance">@style/MyActionBarMenuText</item>
         <item name="homeAsUpIndicator">@drawable/ic_arrow_action_bar_back</item>
     </style>
 
     <!-- ActionBar styles -->
     <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">
-        <item name="android:background">@color/action_bar_bg</item>
+        <item name="android:background">@drawable/shape_actionbar_bg</item>
         <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
         <item name="android:height">@dimen/action_bar_height</item>
         <!--item name="android:backgroundStacked">@android:color/background_light</item-->
 
         <!-- Support library compatibility -->
-        <item name="background">@color/action_bar_bg</item>
+        <item name="background">@drawable/shape_actionbar_bg</item>
         <item name="titleTextStyle">@style/MyActionBarTitleText</item>
-        <item name="backgroundStacked">@color/action_bar_bg_stacked</item>
+        <item name="backgroundStacked">@color/color_main</item>
         <item name="height">@dimen/action_bar_height</item>
     </style>
 
@@ -105,7 +105,7 @@
     </style>
 
     <style name="MyActionBarTabs" parent="@style/Widget.AppCompat.ActionBar.TabView">
-        <item name="android:background">@color/action_bar_tab_bg</item>
+        <item name="android:background">@color/color_main</item>
     </style>
 
     <style name="MyActionBarTabBars" parent="@style/Widget.AppCompat.ActionBar.TabBar">
