--- a/elapp/src/main/res/drawable/personal_icon_constellation_bg.xml
+++ b/elapp/src/main/res/drawable/personal_icon_constellation_bg.xml
@@ -7,6 +7,10 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <solid android:color="@color/base_bg_btn_color_blue_20"/>
-    <corners android:radius="3dp"/>
+    <solid
+        android:color="@color/base_bg_btn_color_blue_20"/>
+    <corners
+        android:radius="3dp"/>
+    <stroke android:color="@color/color_main"
+        android:width="1dp"/>
 </shape>
