--- a/elapp/src/main/res/drawable/shape_boy_bg.xml
+++ b/elapp/src/main/res/drawable/shape_boy_bg.xml
@@ -7,6 +7,9 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <corners android:radius="3dp"/>
     <solid android:color="@color/base_bg_blue_color_20"/>
+    <corners
+        android:radius="3dp"/>
+    <stroke android:color="@color/color_main"
+        android:width="1dp"/>
 </shape>
