--- a/elapp/src/main/res/layout/fragment_register.xml
+++ b/elapp/src/main/res/layout/fragment_register.xml
@@ -110,7 +110,7 @@
             android:textColor="@color/login_text_color_3"
             android:textSize="@dimen/text_size_title_h1"
             android:textColorHint="@color/text_color_three_level"
-            android:hint="@string/set_pw_6to12"/>
+            android:hint="@string/msg_login_set_password"/>
         <ImageView
             android:id="@+id/clear_set_password_iv"
             android:layout_width="wrap_content"
