--- a/elapp/src/main/res/layout/layout_home_tab_banner.xml
+++ b/elapp/src/main/res/layout/layout_home_tab_banner.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-        <com.bigkoo.convenientbanner.ConvenientBanner
+    <com.bigkoo.convenientbanner.ConvenientBanner
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         app:canLoop="true" />
 
-        <RelativeLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:layout_marginTop="6dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginBottom="10dp">
 
         <LinearLayout
-        android:id="@+id/ll_container"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:orientation="horizontal" />
+            android:id="@+id/ll_container"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" />
 
         <ImageView
-        android:id="@+id/iv_selected_point"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@drawable/shape_main_point_pre" />
-        </RelativeLayout>
+            android:id="@+id/iv_selected_point"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/shape_main_point_pre" />
+    </RelativeLayout>
 </LinearLayout>
