--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -141,9 +141,13 @@
 
     <color name="hv_toobar_shadow_start">#3d000000</color>
     <color name="hv_toobar_shadow_end">#08000000</color>
+    <color name="hv622d80">#622d80</color>
     <color name="hvaf99bc">#AF99BC</color>
     <color name="hv1b1720">#1B1720</color>
     <color name="hv676767">#676767</color>
     <color name="hv989898">#989898</color>
     <color name="normal_gray_bg">#f4f4f4</color>
+    <color name="hv784794">#784794</color>
+    <color name="hvb499c3">#b499c3</color>
+    <color name="hvb298c2">#b298c2</color>
 </resources>
