--- a/elapp/src/main/res/layout/activity_set_password.xml
+++ b/elapp/src/main/res/layout/activity_set_password.xml
@@ -16,6 +16,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
+    <View
+        android:id="@+id/common_shadow"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/common_title_tv"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:background="@drawable/shape_toolbar_shadow" />
 
     <TextView
         android:id="@+id/set_password_title_tv"
