--- a/elapp/src/main/res/layout/activity_update_password.xml
+++ b/elapp/src/main/res/layout/activity_update_password.xml
@@ -17,6 +17,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         layout="@layout/common_header_layout"/>
+    <View
+        android:id="@+id/common_shadow"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/common_title_tv"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:background="@drawable/shape_toolbar_shadow" />
     <ImageView
         android:layout_marginTop="15dp"
         style="@style/default_horizontal_line_style"/>
