--- a/elapp/src/main/res/layout/activity_video_list.xml
+++ b/elapp/src/main/res/layout/activity_video_list.xml
@@ -17,12 +17,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
-
+    <View
+        android:id="@+id/common_shadow"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/common_title_tv"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:background="@drawable/shape_toolbar_shadow" />
     <com.easyvaas.common.recycler.PullToLoadView
         android:id="@+id/pull_load_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="54dp" />
+        android:layout_marginTop="@dimen/toolbar_height_with_shadow" />
 
     <ImageView
         android:id="@+id/tap_top_iv"
