--- a/elapp/src/main/res/layout/item_header_user_info.xml
+++ b/elapp/src/main/res/layout/item_header_user_info.xml
@@ -36,9 +36,9 @@
         <ImageView
             android:id="@+id/user_info_back"
             android:layout_width="wrap_content"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:src="@drawable/home_icon_back"
+            android:paddingLeft="18dp"
+            android:paddingRight="18dp"
+            android:src="@drawable/selector_account_ic_back"
             android:layout_height="wrap_content"/>
 
         <ImageView
@@ -46,8 +46,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
+            android:paddingLeft="18dp"
+            android:paddingRight="18dp"
             android:src="@drawable/personal_icon_share"/>
     </RelativeLayout>
 </RelativeLayout>
