--- a/EasyChat/src/main/res/layout/activity_chat.xml
+++ b/EasyChat/src/main/res/layout/activity_chat.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/action_bar_height"
+        android:layout_height="@dimen/toolbar_height_no_shadow"
         android:background="@color/color_main"
         android:gravity="center_vertical">
 
@@ -40,7 +40,7 @@
             android:onClick="onClick"/>
         <RelativeLayout
             android:id="@+id/container_remove"
-            android:layout_width="@dimen/action_bar_height"
+            android:layout_width="@dimen/toolbar_height_no_shadow"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:background="@color/action_bar_bg"
@@ -57,7 +57,7 @@
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/container_to_group"
-            android:layout_width="@dimen/action_bar_height"
+            android:layout_width="@dimen/toolbar_height_no_shadow"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:background="@color/action_bar_bg"
@@ -72,9 +72,16 @@
                 android:src="@drawable/to_group_details_normal"/>
         </RelativeLayout>
     </RelativeLayout>
-    <ImageView
-        android:layout_below="@id/top_bar"
-        style="@style/default_horizontal_line_style"/>
+
+    <View
+        android:id="@+id/common_shadow"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/top_bar"
+        android:layout_height="@dimen/toolbar_shadow"
+        android:background="@drawable/shape_toolbar_shadow" />
+    <!--<ImageView-->
+        <!--android:layout_below="@id/top_bar"-->
+        <!--style="@style/default_horizontal_line_style"/>-->
 
     <RelativeLayout
         android:id="@+id/concern_rl"
