--- a/EasyChat/src/main/res/layout/activity_group_name_change.xml
+++ b/EasyChat/src/main/res/layout/activity_group_name_change.xml
@@ -10,6 +10,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         layout="@layout/common_header_layout"/>
+    <View
+        android:id="@+id/common_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_shadow"
+        android:background="@drawable/shape_toolbar_shadow" />
     <EditText
         android:id="@+id/change_group_name"
         android:layout_width="match_parent"
