--- a/elapp/src/main/res/layout/activity_about_hooview.xml
+++ b/elapp/src/main/res/layout/activity_about_hooview.xml
@@ -9,12 +9,20 @@
     android:layout_height="match_parent"
     android:background="@color/background_color_gray"
     android:fitsSystemWindows="true">
+
     <include
         android:id="@+id/common_title_tv"
+        layout="@layout/common_header_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        layout="@layout/common_header_layout"/>
+        android:layout_alignParentTop="true" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:layout_below="@+id/common_title_tv"
+        android:background="@drawable/shape_toolbar_shadow" />
+
     <TextView
         android:id="@+id/content_tv"
         android:layout_width="match_parent"
@@ -23,7 +31,7 @@
         android:layout_marginRight="14dp"
         android:layout_marginTop="86dp"
         android:text="@string/yihzibo_copyright"
-        android:textSize="@dimen/text_size_16" />
+        android:textSize="@dimen/text_size_title_h2" />
 
     <TextView
         android:id="@+id/copyright_tv"
