--- a/elapp/src/main/res/layout/activity_bind_phone_auth.xml
+++ b/elapp/src/main/res/layout/activity_bind_phone_auth.xml
@@ -19,6 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:background="@drawable/shape_toolbar_shadow" />
     <include
         android:id="@+id/country_code_rl"
         android:layout_width="match_parent"
