--- a/elapp/src/main/res/layout/activity_cash_in.xml
+++ b/elapp/src/main/res/layout/activity_cash_in.xml
@@ -17,6 +17,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         layout="@layout/common_header_layout"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:layout_below="@+id/common_title_tv"
+        android:background="@drawable/shape_toolbar_shadow" />
     <LinearLayout
         android:id="@+id/account_balance_ll"
         android:layout_width="match_parent"
