--- a/elapp/src/main/res/layout/activity_copyright.xml
+++ b/elapp/src/main/res/layout/activity_copyright.xml
@@ -9,6 +9,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         layout="@layout/common_header_layout"/>
+    <View
+        android:id="@+id/commin_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:layout_below="@+id/common_title_tv"
+        android:background="@drawable/shape_toolbar_shadow" />
     <TextView
         android:id="@+id/content_tv"
         android:layout_width="match_parent"
@@ -17,5 +23,5 @@
         android:layout_marginRight="14dp"
         android:layout_marginTop="32dp"
         android:text="@string/yihzibo_copyright"
-        android:textSize="@dimen/text_size_13" />
+        android:textSize="@dimen/text_size_title_h2" />
 </LinearLayout>
