--- a/elapp/src/main/res/layout/activity_verify_before_change_phone.xml
+++ b/elapp/src/main/res/layout/activity_verify_before_change_phone.xml
@@ -19,6 +19,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         layout="@layout/common_header_layout"/>
+    <View
+        android:id="@+id/common_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:background="@drawable/shape_toolbar_shadow" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
