--- a/elapp/src/main/res/layout/activity_web_view.xml
+++ b/elapp/src/main/res/layout/activity_web_view.xml
@@ -16,10 +16,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         layout="@layout/common_header_layout"/>
+    <View
+        android:id="@+id/common_shadow"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/common_title_tv"
+        android:layout_height="@dimen/actionbar_shadow_height"
+        android:background="@drawable/shape_toolbar_shadow" />
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="@dimen/toolbar_height_with_shadow"
         android:layout_height="match_parent">
         <WebView
             android:id="@+id/web_view"
