--- a/elapp/src/main/res/layout/fragment_home_main_tab.xml
+++ b/elapp/src/main/res/layout/fragment_home_main_tab.xml
@@ -7,6 +7,11 @@
 
     <include layout="@layout/layout_home_toolbar" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@drawable/shape_toolbar_shadow" />
+
     <android.support.v4.widget.SwipeRefreshLayout
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
