--- a/elapp/src/main/res/layout/fragment_message.xml
+++ b/elapp/src/main/res/layout/fragment_message.xml
@@ -36,11 +36,17 @@
             android:text="@string/create_group"
             android:textSize="@dimen/text_size_12"/>
     </RelativeLayout>
+    <View
+        android:id="@+id/shadow_view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/message_top_title_rl"
+        android:background="@drawable/shape_toolbar_shadow" />
 
     <com.easyvaas.common.recycler.PullToLoadView
         android:id="@+id/pull_load_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/message_top_title_rl"/>
+        android:layout_below="@id/shadow_view"/>
 </RelativeLayout>
