--- a/elapp/src/main/res/values/dimens.xml
+++ b/elapp/src/main/res/values/dimens.xml
@@ -90,4 +90,6 @@
 
     <!--像素-->
     <dimen name="actionbar_shadow_height">1dp</dimen>
+    <dimen name="toolbar_height_no_shadow">56dp</dimen>
+    <dimen name="toolbar_height_with_shadow">57dp</dimen>
 </resources>
